[workspace]
members = ["lib/*"]
resolver = "2"

[workspace.package]
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/cloudflare/workers-rs"
authors = [
    "Cloudflare Workers Team <workers@cloudflare.com>",
    "Celeste Peláez <celeste@etheryal.net>",
]
readme = "README.md"

[workspace.dependencies]
betterworker-build = { path = "lib/build" }
betterworker-macros = { path = "lib/macros" }
betterworker-sandbox = { path = "lib/sandbox" }
betterworker = { path = "lib/worker" }
betterworker-sys = { path = "lib/worker-sys" }
