[package]
name = "betterworker-macros"
authors = { workspace = true }
edition = { workspace = true }
version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
description = "Macros to support the `worker` crate and remove FFI boilerplate / conversion from user code."

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.74"
betterworker-sys = { workspace = true }
syn = "2.0.28"
proc-macro2 = "1.0.66"
quote = "1.0.32"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
wasm-bindgen-macro-support = "0.2.87"

[features]
queue = []
