[package]
name = "betterworker-sys"
authors = { workspace = true }
edition = { workspace = true }
version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
description = "Low-level extern definitions / FFI bindings to the Cloudflare Workers JS Runtime."

[dependencies]
cfg-if = "1.0.0"
js-sys = "0.3.64"
wasm-bindgen = "0.2.87"

[dependencies.web-sys]
version = "0.3.64"
features = [
    "ReadableStream",
    "WritableStream",
    "RequestRedirect",
    "RequestInit",
    "FormData",
    "Blob",
    "BinaryType",
    "ErrorEvent",
    "MessageEvent",
    "CloseEvent",
    "ProgressEvent",
    "WebSocket",
    "TransformStream",
    "AbortController",
    "console",
    "ResponseInit",
    "Cache",
    "CacheStorage",
    "CacheQueryOptions",
    "AbortSignal",
    "Headers",
    "Request",
    "Response",
    "ReadableStreamDefaultReader",
    "WritableStreamDefaultWriter",
]

[features]
d1 = []
queue = []
